# rustgrpcclient

./: Cargo.toml  build.rs
proto/: routing.proto
src/: main.rs
