[package]
name = "my_grpx_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio =  { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"
[build-dependencies]
tonic-build = "0.10.2"

